fix accordion gaps

--- a/src/components/UI-kit/AccordeonKit/accordion/accordion.module.scss
+++ b/src/components/UI-kit/AccordeonKit/accordion/accordion.module.scss
@@ -69,35 +69,8 @@
   opacity: 0;
   transition: height 0.2s ease-in-out;
 
-  span {
-    .accordion:first-child {
-      padding-bottom: 18px;
-    }
-
-    li {
-      a,
-      .header {
-        @include font(1, 20, 30);
-
-        font-size: 20px !important;
-      }
-
-      &:not(:has(.header)) {
-        &:first-child {
-          margin-top: 12px;
-        }
-
-        &:last-child {
-          margin-bottom: 12px;
-        }
-
-        padding: 18px 0;
-      }
-
-      .header {
-        color: #fdf1cd;
-      }
-    }
+  span>.accordion:first-child {
+    padding-bottom: 18px;
   }
 }
 
